update by HoangPhuc

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SheratonConnection": "Server=DESKTOP-0BLD8A0;Database=SheratonDB;Trusted_Connection=True;TrustServerCertificate=True",
+    "SheratonConnection": "Server=DESKTOP-2KH4AIL;Database=SheratonDB;Trusted_Connection=True;TrustServerCertificate=True",
     "SheratonContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Sheraton;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
