--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "SheratonConnection": "Server=DESKTOP-0BLD8A0;Database=SheratonDB;Trusted_Connection=True;TrustServerCertificate=True",
     "SheratonContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Sheraton;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Vnpay": {
+    "TmnCode": "QS80ME4D", // Ví dụ
+    "HashSecret": "Y18VTRD0HKGOZ0RL8OSEBE1T0KDVY2S8", // Ví dụ
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html", // Ví dụ URL của môi trường Sandbox
+    "CallbackUrl": "https://localhost:7136/api/Vnpay/Callback" // Ví dụ
   }
 }
